css/codeup-design.css
body{
    font-family: 'Anton', sans-serif;
    background-color: #F0F0F0;

}
h1{
    font-size: 64px;
}
h2 {
    font-size: 48px;
}
h3{
    font-size: 40px;
}
h4 {
    font-size: 32;
}
.circle h4{
    color: white;
}
h5 {
    font-size: 12px;
    padding-top: 8px;
}

.circle{
    width: 105px;
    height: 105px;
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
    border-radius: 50px;
    border: solid white 5px;
}
.circleRed {
    background-color: #E6563B;

}
.circleOrange {
    background-color: #EB9D3A;
}
.circleGreen {
    background-color: #7CB06C;
}
.circleBlue {
    background-color: #00ABA9;
}
.mini-circle{
    width: 18px;
    height: 18px;
    -webkit-border-radius: 9px;
    -moz-border-radius: 9px;
    border-radius: 9px;
    color: black;
    font-size: 10px;

}

.para {
    font-family: 'Abel', sans-serif;
    font-size: 20px;


}

.parent-card{
    align-self: center;
}
.card-footer{
    padding-left: 0;
    padding-right: 0;
    padding-top: 1em;
}
/*.extra-small{*/
    /*padding-bottom: 5em;*/
/*}*/
#apple, #man, #security, #macbook {

    border: solid red 10px;
    border-radius: 5px;
}
/*#man {*/
    /*width: 100%;*/
    /*height: auto;*/
/*}*/
img{
    display: flex;
    width: auto;
    height: 200px;
}
.card-footer p{
    font-size: 10px;
}

